--- a/README
+++ b/README
@@ -5,8 +5,8 @@
 2014-03-01-101             24    360    89.7%   3/ 5     125
 2014-03-21-FP               1    135    71.8%   5/ 5     220
 2014-03-29-101             44    246    65.0%   2/ 5      70
-2014-04-18-FP               1      ?       ?    5/ 5     330
-2014-04-21-Weekly           ?      ?       ?    1/ 5      20
+2014-04-18-FP               1    130    85.3%   5/ 5     330
+2014-04-21-Weekly         486    799     8.5%   1/ 5      20
 2014-04-26-101             15    149    89.9%   4/ 5     220
 
 RANK: final rank on the leaderboard
