--- a/README
+++ b/README
@@ -8,6 +8,7 @@
 2014-04-18-FP               1    130    85.3%   5/ 5     330
 2014-04-21-Weekly         486    799     8.5%   1/ 5      20
 2014-04-26-101             15    149    89.9%   4/ 5     220
+2014-05-05-Weekly          36    583    93.8%   1/ 5     205
 
 RANK: final rank on the leaderboard
 PRTCP: total number of participants according to the leaderboard
