--- a/README
+++ b/README
@@ -10,7 +10,8 @@
 2014-04-26-101             15    149    89.9%   4/ 5     220
 2014-05-05-Weekly          36    583    93.8%   1/ 5     205
 2014-05-16-FP             (*)    161    ----    5/ 5     330
-2014-05-19-Weekly          41?   719    94.2%?  4/ 5     289
+2014-05-19-Weekly          41    719    94.2%   4/ 5     289
+2014-05-31-101             95    381    74.5%   2/ 5      70
 
 RANK: final rank on the leaderboard
 PRTCP: total number of participants according to the leaderboard
