Oops, forgot to update the README.

--- a/README
+++ b/README
@@ -12,6 +12,7 @@
 (*) 2014-05-16-FP         ---    161    ----    4/ 4     180
 2014-05-19-Weekly          41    719    94.2%   4/ 5     289
 2014-05-31-101             95    381    74.5%   2/ 5      70
+2014-06-02-Weekly         381    798    51.0%   0/ 5      39
 
 RANK: final rank on the leaderboard
 PRTCP: total number of participants according to the leaderboard
