--- a/README
+++ b/README
@@ -13,6 +13,7 @@
 2014-05-19-Weekly          41    719    94.2%   4/ 5     289
 2014-05-31-101             95    381    74.5%   2/ 5      70
 2014-06-02-Weekly         381    798    51.0%   0/ 5      39
+2014-06-16-Weekly          81    951    88.0%   3/ 5     130
 
 RANK: final rank on the leaderboard
 PRTCP: total number of participants according to the leaderboard
