--- a/README
+++ b/README
@@ -14,6 +14,8 @@
 2014-05-31-101             95    381    74.5%   2/ 5      70
 2014-06-02-Weekly         381    798    51.0%   0/ 5      39
 2014-06-16-Weekly          81    951    88.0%   3/ 5     130
+2014-06-20-FP               6    ???     ???    5/ 5     400
+2014-06-28-101             56    302    81.4%   2/ 5      79
 
 RANK: final rank on the leaderboard
 PRTCP: total number of participants according to the leaderboard
@@ -24,4 +26,7 @@ SCOR: raw final score on the leaderboard
 
 (*) I authored one of the problems for this contest - Down With
     Abstractions - so I only participated unofficially.
+
+Note that solutions which passed all the test cases are always
+marked with "accepted".
 
