--- a/README
+++ b/README
@@ -19,6 +19,7 @@
 2014-07-14-Weekly         280   1154    69.6%   2/ 5      80
 (2) 2014-07-18-FP         ---    203    ----    5/ 5     270
 2014-07-26-101             54    498    85.9%   3/ 5     100
+2014-08-04-Weekly         309   1468    71.6%   2/ 5      80
 
 RANK: final rank on the leaderboard
 PRTCP: total number of participants according to the leaderboard
